fix issues related with alignment

--- a/src/category/presentation/categoryEditor/components/categoryRow/CategoryRow.module.css
+++ b/src/category/presentation/categoryEditor/components/categoryRow/CategoryRow.module.css
@@ -12,10 +12,8 @@
   padding: 1rem 1rem 0;
   border-radius: 0.5rem;
   min-height: 10rem;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 5rem;
-  justify-content: center;
+  display: flex;
+  gap: 7.5rem;
   background-color: #fff;
 }
 
