--- a/src/products/presentation/productCard/ProductCard.module.css
+++ b/src/products/presentation/productCard/ProductCard.module.css
@@ -7,7 +7,7 @@
 .productCard {
   border: 1px solid #ccc;
   height: 25rem;
-  width: 100%;
+  width: 20rem;
   border-radius: 0.5rem;
   box-shadow: 0 0.125rem 0.3125rem rgba(0, 0, 0, 0.1);
   overflow: hidden;
